# embedddos

./: Makefile  README.md
bootloader/: Cargo.toml  Makefile  memory.x
bootloader/src/: main.rs
kernel/: Cargo.toml  Makefile  memory.x
kernel/src/: main.rs
